# CO650--NSCA

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CodeBase/CO650-Part-1/: CMakelists.txt
CodeBase/CO650-Part-1/Client/: CMakelists.txt
CodeBase/CO650-Part-1/Client/Src/: Client.cpp
CodeBase/CO650-Part-1/Include/: WinSock2-Example.h
CodeBase/CO650-Part-1/Server/Include/: Intro.h  WinSock2-Example.h
CodeBase/CO650-Part-1/Server/Src/: Intro.cpp  WinSock2-Example.cpp
CodeBase/CO650-Part-1/Src/: Intro.cpp  WinSock2-Example.cpp
CodeBase/archived/CO650-Part-1/Client/: CMakelists.txt
CodeBase/archived/CO650-Part-1/Client/include/: Client.h
CodeBase/archived/CO650-Part-1/Server/: CMakelists.txt
CodeBase/archived/HelloWorld/: CMakeLists.txt
CodeBase/archived/HelloWorld/Include/: HelloWorld.h
CodeBase/archived/HelloWorld/Src/: Main.cpp
Notes-&-Study-Guides/: Access-build-files.md  CO650-Part-1.md  Winsock.md
cmake/: define_tool.cmake
